<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.workshop</groupId>
  <artifactId>clean-code-workshop-java</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>
  <name>Clean Code Workshop (Java)</name>
  <modules>
    <module>01-naming-magicnumbers</module>
    <module>02-longmethod-nesting</module>
    <module>03-deadcode-duplication</module>
    <module>04-primitive-obsession</module>
    <module>05-switch-to-polymorphism</module>
    <module>06-error-handling-null</module>
    <module>07-god-class-order-processor</module>
    <module>08-library-cli</module>
    <module>09-feature-envy-mutable-singleton</module>
  </modules>
  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.version>5.9.3</junit.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
          <configuration>
            <useModulePath>false</useModulePath>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
